--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-header {
   background-color: white;
-  height: 100vh;
+  /*height: 100vh*/;
   display: flex;
   flex-direction: column;
   align-items: center;
