--- a/src/components/Budget/BudgetFormElements.css
+++ b/src/components/Budget/BudgetFormElements.css
@@ -1,5 +1,5 @@
 .budgetInputField {
-  background-color: rgb(166, 245, 166);
+  background-color:  #a0ecd0;
   border-top: none;
   border-left: none;
   border-right: none;
