--- a/src/components/NameAndCurrency/NameAndCurrency.css
+++ b/src/components/NameAndCurrency/NameAndCurrency.css
@@ -5,7 +5,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: rgb(166, 245, 166);
+  background-color:  #a0ecd0;;
 }
 
 
@@ -25,7 +25,7 @@
   border-left: none;
   border-right: none;
   color: white;
-  background-color: rgb(166, 245, 166);
+  background-color:  #a0ecd0;;
   margin-bottom: 5px;
 }
 .appDescription {
