--- a/src/components/UI/Header.css
+++ b/src/components/UI/Header.css
@@ -4,7 +4,7 @@
   margin-bottom: -35px;
   padding-top: 50px;
   padding-bottom: 80px;
-  background-color: rgb(166, 245, 166);
+  background-color: #a0ecd0;
 }
 
 .title {
