--- a/src/components/NewIncome/incomeFormElements.css
+++ b/src/components/NewIncome/incomeFormElements.css
@@ -1,7 +1,19 @@
 .incomeInputField {
-  background-color: rgb(166, 245, 166);
+  background-color:  #a0ecd0;
   border-top: none;
   border-left: none;
   border-right: none;
   color: white;
+}
+
+@media only screen and (min-width: 1920px){
+  .incomeInput {
+    margin-left: -150px
+  }
+  }
+
+@media only screen and (min-width: 2560px){
+.incomeInput {
+  margin-left: -200px
+}
 }
